--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "dependencies": {
     "debug": "^2.2.0",
     "fast-levenshtein": "^1.1.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "sinon": "^1.17.3"
   }
 }
